[package]
name = "rclite"
version = "0.2.1"
edition = "2018"
rust-version = "1.47"
authors = ["Khashayar Fereidani"]
description = "small, fast, and memory-friendly reference counting compatible with Arc and Rc APIs"
repository = "https://github.com/fereidani/rclite"
documentation = "https://docs.rs/rclite"
keywords = ["arc", "rc", "no_std"]
categories = ["data-structures", "concurrency"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["usize-for-small-platforms"]
usize-for-small-platforms = []