[package]
name = "rclite"
version = "0.2.4"
edition = "2018"
rust-version = "1.47"
authors = ["Khashayar Fereidani"]
description = "small, fast, and memory-friendly reference counting compatible with Arc and Rc APIs"
repository = "https://github.com/fereidani/rclite"
documentation = "https://docs.rs/rclite"
keywords = ["arc", "rc", "no_std"]
categories = ["data-structures", "concurrency", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["usize-for-small-platforms"]
usize-for-small-platforms = []

[dependencies]
branches = "0.1"
enum-ptr = { version = "0.2.0", optional = true }

[dev-dependencies]
criterion = "0.4"
rayon = "1"

[[bench]]
name = "rc"
harness = false

[[bench]]
name = "rc_btree"
harness = false

[[bench]]
name = "rc_make_mut"
harness = false

[[bench]]
name = "arc"
harness = false

[[bench]]
name = "arc_btree"
harness = false
